--- a/se/cs/umu/App/DebuggerGUI.form
+++ b/se/cs/umu/App/DebuggerGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="se.cs.umu.App.DebuggerGUI">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="13" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="13" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="16" y="17" width="935" height="539"/>
+      <xy x="16" y="17" width="1034" height="539"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -117,7 +117,7 @@
       </component>
       <component id="76cfd" class="javax.swing.JLabel">
         <constraints>
-          <grid row="7" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Release Intercepted"/>
@@ -125,7 +125,7 @@
       </component>
       <component id="fc66a" class="javax.swing.JButton" binding="releaseNewestButton">
         <constraints>
-          <grid row="8" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Newest"/>
@@ -133,7 +133,7 @@
       </component>
       <component id="6ee96" class="javax.swing.JButton" binding="releaseOldestButton">
         <constraints>
-          <grid row="9" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Oldest"/>
@@ -141,7 +141,7 @@
       </component>
       <component id="31db6" class="javax.swing.JButton" binding="releaseAllButton">
         <constraints>
-          <grid row="10" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="All"/>
@@ -149,7 +149,7 @@
       </component>
       <component id="75058" class="javax.swing.JCheckBox" binding="checkBox1">
         <constraints>
-          <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Intercept"/>
@@ -231,6 +231,29 @@
           <enabled value="true"/>
           <selected value="false"/>
           <text value="FIFO"/>
+        </properties>
+      </component>
+      <scrollpane id="3c63b">
+        <constraints>
+          <grid row="1" column="6" row-span="10" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="1fb69" class="javax.swing.JTextArea" binding="textArea3" default-binding="true">
+            <constraints/>
+            <properties>
+              <background color="-4276546"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="488e1" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Debug Buffer Contents"/>
         </properties>
       </component>
     </children>
